replaces utility extends

--- a/app/_sass/components/_card.sass
+++ b/app/_sass/components/_card.sass
@@ -6,8 +6,8 @@
 // *************************************
 
 .card
-  @extend .bci
-  @extend .por
-  // @extend .ram
+  background-color: $c-invert
+  // border-radius: $b-borderRadius
+  position: relative
   padding: $b-whitespace
 
