--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -9,9 +9,9 @@
   box-sizing: border-box
 
 html
-  @extend .tfb
-  @extend .tcb
-  background: $c-background
+  background-color: $c-background
+  color: $c-base
+  font-family: $f-base
   line-height: $b-lineHeight
   text-rendering: optimizeLegibility
 
@@ -23,23 +23,23 @@ body
 // -------------------------------------
 
 ol, ul, p
-  @extend .mbm
-  @extend .mtf
+  margin-bottom: $b-whitespace
+  margin-top: 0
 
 li
-  @extend .mbs
-  @extend .mtf
+  margin-bottom: $b-whitespace-s
+  margin-top: 0
 
 h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4
-  @extend .mbm
-  @extend .mtf
-  @extend .tfh
-  @extend .twb
   color: $c-header
+  font-family: $f-header
+  font-weight: 700
   line-height: 1.2
+  margin-bottom: $b-whitespace
+  margin-top: 0
 
 h1, .h1
   @extend .tsxxxl
@@ -62,8 +62,8 @@ pre
 // -------------------------------------
 
 a
-  @extend .tch
-  @extend .twb
+  color: $c-highlight
+  font-weight: 600
   text-decoration: none
   transition: $b-transition
   &:hover,
