--- a/app/_sass/structures/_label.sass
+++ b/app/_sass/structures/_label.sass
@@ -6,10 +6,10 @@
 // *************************************
 
 .label
-  @extend .tcs
   @extend .tss
   @extend .ttu
-  @extend .twb
+  color: $c-subdue
+  font-weight: 600
 
 // -------------------------------------
 //   Modifiers
