--- a/app/_sass/structures/_list.sass
+++ b/app/_sass/structures/_list.sass
@@ -15,8 +15,8 @@
 .list--inline
   padding: 0
   > li
-    @extend .dib
-    @extend .mrs
+    display: inline-block
+    margin-right: $b-whitespace-s
 
 .list--unstyled
   list-style: none
@@ -25,7 +25,7 @@
 
 .list--flat
   li
-    @extend .mbf
+    margin-bottom: 0
 
 
 // -------------------------------------
