--- a/app/_sass/structures/_logo.sass
+++ b/app/_sass/structures/_logo.sass
@@ -30,7 +30,7 @@
 // -------------------------------------
 
 .logo-image
-  @extend .mrs
+  margin-right: $b-whitespace-s
   width: 60px
   +respond-to($bp-fontSize)
     width: auto
