--- a/app/_sass/structures/_split.sass
+++ b/app/_sass/structures/_split.sass
@@ -22,7 +22,7 @@
     padding-top: $b-whitespace-s
 
 .split--responsive
-  @extend .db
+  display: block
   .split-title,
   .split-support
     +respond-to($bp-grid-m, 'max-width')
