--- a/app/_sass/components/_bucket.sass
+++ b/app/_sass/components/_bucket.sass
@@ -34,9 +34,9 @@
 // ----- Media ----- //
 
 .bucket-media
-  @extend .fl
-  @extend .mrm
+  float: left
+  margin-right: $b-whitespace
   > img
-    @extend .db
+    display: block
     max-width: none
 
