--- a/app/_sass/components/_cell.sass
+++ b/app/_sass/components/_cell.sass
@@ -6,9 +6,10 @@
 // *************************************
 
 .cell
-  @extend .mbm
-  @extend .mhc
-  @extend .mtm
+  margin-bottom: $b-whitespace
+  margin-left: auto
+  margin-right: auto
+  margin-top: $b-whitespace
   max-width: $b-maxWidth
   position: relative
 
