--- a/app/_sass/components/_row.sass
+++ b/app/_sass/components/_row.sass
@@ -14,7 +14,7 @@
 // -------------------------------------
 
 .row--b
-  @extend .bch
+  background-color: $c-highlight
 
 .row--c
   padding-bottom: $b-whitespace-xl
