--- a/app/_sass/structures/_header.sass
+++ b/app/_sass/structures/_header.sass
@@ -33,10 +33,11 @@
 // -------------------------------------
 
 .header-content
-  @extend .mhc
   border-bottom: $b-border
   display: table
   line-height: 1
+  margin-left: auto
+  margin-right: auto
   max-width: $b-maxWidth
   padding-bottom: $b-whitespace
   padding-top: $b-whitespace
@@ -48,5 +49,5 @@
   display: table-cell
 
 .header-navigation
-  @extend .tar
   display: table-cell
+  text-align: right
