btn transition inheritance

--- a/app/_sass/structures/_button.sass
+++ b/app/_sass/structures/_button.sass
@@ -25,6 +25,7 @@ $button-borderWidth: 1px
   padding: $b-whitespace-s $b-whitespace
   position: relative
   text-shadow: 0 -1px 0 $button-borderColor
+  transition: none
   &::before, &::after
     backface-visibility: hidden // Addresses Safari transition flicker
     border-radius: $b-borderRadius - $button-borderWidth
