--- a/app/_sass/structures/_button.sass
+++ b/app/_sass/structures/_button.sass
@@ -18,6 +18,7 @@ $button-borderWidth: 1px
   border-radius: $b-borderRadius
   box-shadow: inset 0 1px 0 $button-background-light, 0 3px 0 $button-borderColor
   color: $c-invert
+  cursor: pointer
   display: inline-block
   font-weight: 600
   line-height: 1.25
