--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,5 @@
 %section.row.row--a.tci
-  .cell.well
+  .cell.well.well--l
     .g
       .g-b.g-b--m--1of2
         %h1 Hey, there.
@@ -7,30 +7,26 @@
         %p I work (and learn) at Code School, geek out over CSS architecture, and love me some web typography.
 
 %section.row
-  .cell.well
+  .cell.well.well--l
     .g
       .g-b.g-b--m--1of2
         %h2 Latest Blog Post
-        %a{:href => ""}= lorem.words(3).titleize
-        %p Month 31, 20XX
-        %p= lorem.words(40).capitalize
+        - get_posts()[0..0].each do |post|
+          %a{:href => "#{post.url}"}= post.data.title
+          %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
+          %p= post.data.description
       .g-b.g-b--m--1of2
         .card
           %h3 More Posts
           %ul
-            %li
-              %a{:href => ""}= lorem.words(3).titleize
-              %p Month 31, 20XX
-            %li
-              %a{:href => ""}= lorem.words(3).titleize
-              %p Month 31, 20XX
-            %li
-              %a{:href => ""}= lorem.words(3).titleize
-              %p Month 31, 20XX
+            - get_posts()[1..3].each do |post|
+              %li
+                %a{:href => "#{post.url}"}= post.data.title
+                %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
 
 %section.row
-  .cell.well
-    .group
+  .cell.well.well--l
+    .group.mbm
       %h3.fl Dribbble Shots
       %a.fr{:href => ""} View Profile ->
     .g
