--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -64,8 +64,9 @@ $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 
 // ----- Typography ----- //
 
-$b-fontFamily-heading: sans-serif
-$b-fontFamily: sans-serif
+$b-fontFamily-heading: 'ff-tisa-web-pro', 'Georgia', serif
+$b-fontFamily-monospace: menlo, monaco, "andale mono", courier, "lucida console", monospace
+$b-fontFamily: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontSize: 16px
 $b-fontSize-xs: 60%
 $b-fontSize-s: 75%
