Remove Split dependencies

--- a/source/assets/stylesheets/components/_split.sass
+++ b/source/assets/stylesheets/components/_split.sass
@@ -6,7 +6,9 @@
 // *************************************
 
 .split
-  @extend .list
+  list-style-type: none
+  margin: 0
+  padding: 0
 
 // -------------------------------------
 //   Scaffolding
