Add Header Structure
- Create Header Structure
- Apply classes in layout

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -24,13 +24,14 @@
 @import "components/grid"
 @import "components/list"
 @import "components/row"
+@import "components/split"
 @import "components/well"
 
 // -------------------------------------
 //   Structures
 // -------------------------------------
 
-@import "structures/example"
+@import "structures/header"
 
 // -------------------------------------
 //   Vendor
