--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -55,7 +55,7 @@ $c-text: $nero
 
 // ----- Borders & Box Shadow ----- //
 
-$b-borderColor: lighten($orchid, 30%)
+$b-borderColor: $quill
 $b-borderRadius: 5px
 $b-borderStyle: solid
 $b-borderWidth: 2px
@@ -99,5 +99,9 @@ $g-l: 64em // ~1024px
 //   Structures
 // -------------------------------------
 
-// ...
+// ----- Header ----- //
+
+$header-link-border: 3px solid $quill
+$header-link-color: inherit
+$header-link-fontWeight: inherit
 
