Move List variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -95,6 +95,10 @@ $g-s: 30em // ~480px
 $g-m: 50em // ~800px
 $g-l: 64em // ~1024px
 
+// ----- List ----- //
+
+$list-space: $b-space
+
 // -------------------------------------
 //   Structures
 // -------------------------------------
