Add divided Split modifier

--- a/source/assets/stylesheets/components/_split.sass
+++ b/source/assets/stylesheets/components/_split.sass
@@ -11,6 +11,21 @@
   padding: 0
 
 // -------------------------------------
+//   Modifiers
+// -------------------------------------
+
+// ----- Divided ----- //
+
+.split--divided
+
+  .split-item
+    border-bottom: $b-border
+    padding-bottom: $split-space
+    &:last-child
+      border-bottom: 0
+      padding-bottom: 0
+
+// -------------------------------------
 //   Scaffolding
 // -------------------------------------
 
