--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -99,6 +99,10 @@ $g-l: 64em // ~1024px
 
 $list-space: $b-space
 
+// ----- Split ----- //
+
+$split-space: $b-space-s
+
 // -------------------------------------
 //   Structures
 // -------------------------------------
