--- a/source/index.haml
+++ b/source/index.haml
@@ -10,19 +10,21 @@
   .cell.well.well--l
     .g
       .g-b.g-b--m--1of2
-        %h2 Latest Blog Post
+        %h2.mbs Latest Blog Post
         - get_posts()[0..0].each do |post|
-          %a{:href => "#{post.url}"}= post.data.title
+          %a.h3.tfb{:href => "#{post.url}"}= post.data.title
           %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
           %p= post.data.description
       .g-b.g-b--m--1of2
         .card
-          %h3 More Posts
-          %ul
+          %h3.mbm More Posts
+          %ul.split.split--divided
             - get_posts()[1..3].each do |post|
-              %li
-                %a{:href => "#{post.url}"}= post.data.title
-                %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
+              %li.split-item
+                .split-cell.split-cell--fluid
+                  %a.h3.tfb{:href => "#{post.url}"}= post.data.title
+                .split-cell.split-cell--fixed
+                  %time.tcs.tsm.ttu.twb= pretty_date(post.data.date)
 
 %section.row
   .cell.well.well--l
