--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -30,6 +30,7 @@ $alabaster: #faf9f7
 
 // Purple
 
+$majesty: #8a5c99
 $orchid: #93609d
 
 // ----- Base ----- //
@@ -37,6 +38,7 @@ $orchid: #93609d
 $c-background-invert: $desertstorm
 $c-background: $alabaster
 $c-highlight: $orchid
+$c-highlight-b: $majesty
 $c-subdue: darken($quill, 20%)
 $c-text-invert: $alabaster
 $c-text: $nero
