--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -1,6 +1,6 @@
 // *************************************
 //
-//   MVCSS v4.0.0
+//   johndjameson.com - MVCSS v4.0.1
 //   -> Manifest
 //
 // *************************************
