Add syntax highlighting styles
- Add Vendor/Highlight
- Update `application.sass`

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -37,7 +37,7 @@
 //   Vendor
 // -------------------------------------
 
-// Third-party style imports, if needed
+@import "vendor/highlight"
 
 // -------------------------------------
 //   Foundation - Tools
@@ -48,4 +48,3 @@
 // -------------------------------------
 //   Inbox
 // -------------------------------------
-
