--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -52,6 +52,10 @@ $c-text: $nero
 
 // ...
 
+// ----- Vendor ----- //
+
+$highlight-background: $c-background-invert
+
 // -------------------------------------
 //   Base
 // -------------------------------------
@@ -114,3 +118,11 @@ $split-space: $b-space-s
 $header-link-border: 3px solid $quill
 $header-link-color: inherit
 $header-link-fontWeight: inherit
+
+// -------------------------------------
+//   Vendor
+// -------------------------------------
+
+// ----- Highlight ----- //
+
+$highlight-space: $b-space
