Add `ol` to Base

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -19,7 +19,7 @@ body
 //   Block Content
 // -------------------------------------
 
-ul, p
+ol, ul, p
   margin-bottom: $b-space
   margin-top: 0
 
