--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -32,6 +32,7 @@
 // -------------------------------------
 
 @import "structures/header"
+@import "structures/post"
 
 // -------------------------------------
 //   Vendor
