--- a/source/index.haml
+++ b/source/index.haml
@@ -12,25 +12,26 @@
       .g-b.g-b--m--1of2
         %h2.mbs Latest Blog Post
         - get_posts()[0..0].each do |post|
-          %a.h3.tfb{:href => "#{post.url}"}= post.data.title
+          = link_to post.data.title, post.url, class: 'h3 tfb'
           %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
           %p= post.data.description
       .g-b.g-b--m--1of2
         .card
           %h3.mbm More Posts
-          %ul.split.split--divided
+          %ul.split.split--divided.mbm
             - get_posts()[1..3].each do |post|
               %li.split-item
                 .split-cell.split-cell--fluid
                   %a.h3.tfb{:href => "#{post.url}"}= post.data.title
                 .split-cell.split-cell--fixed
                   %time.tcs.tsm.ttu.twb= pretty_date(post.data.date)
+          = link_to 'My Sweet Blog', '/blog', class: 'btn btn--a btn--l'
 
 %section.row
   .cell.well.well--l
     .group.mbm
       %h3.fl Dribbble Shots
-      %a.fr{:href => ""} View Profile ->
+      =link_to 'View Profile', 'https://dribbble.com/johndjameson', class: 'fr'
     .g
       .g-b.g-b--s--1of2.g-b--l--1of4
         = image_tag lorem.image('640x480')
