--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -11,7 +11,7 @@
     .g
       .g-b.g-b--center.g-b--m--3of4
         - get_posts()[0..0].each do |post|
-          %a.h2.tfb{:href => "#{post.url}"}= post.data.title
+          = link_to post.data.title, post.url, class: 'h2 tfb'
           %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
           %p.mbl= post.data.description
         .card
@@ -20,6 +20,6 @@
             - get_posts()[1..3].each do |post|
               %li.split-item
                 .split-cell.split-cell--fluid
-                  %a.h3.tfb{:href => "#{post.url}"}= post.data.title
+                  = link_to post.data.title, post.url, class: 'h3 tfb'
                 .split-cell.split-cell--fixed
                   %time.tcs.tsm.ttu.twb= pretty_date(post.data.date)
