--- a/source/index.haml
+++ b/source/index.haml
@@ -22,7 +22,7 @@
             - get_posts()[1..3].each do |post|
               %li.split-item
                 .split-cell.split-cell--fluid
-                  %a.h3.tfb{:href => "#{post.url}"}= post.data.title
+                  = link_to post.data.title, post.url, class: 'h3 tfb'
                 .split-cell.split-cell--fixed
                   %time.tcs.tsm.ttu.twb= pretty_date(post.data.date)
           = link_to 'My Sweet Blog', '/blog', class: 'btn btn--a btn--l'
