--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -1,32 +1,10 @@
 !!! 5
 %html{ :lang => 'en' }
-  %head
-    %meta{ :charset => 'utf-8' }
-    %meta{ :content => 'IE=edge,chrome=1', 'http-equiv' => 'X-UA-Compatible' }
-    %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0' }
-
-    / Use title if it's in the page YAML frontmatter
-    %title= current_page.data.title || 'The Middleman'
-
-    = stylesheet_link_tag 'application'
-    = javascript_include_tag "//use.typekit.net/gqu6ggi.js"
-    :javascript
-      try{Typekit.load();}catch(e){}
+  = partial 'shared/head'
 
   %body{ class: page_classes }
 
-    %header.header
-      .header-content
-        .header-masthead
-          %a{:href => "/"}
-            = image_tag 'johndjameson-logo.svg', :height => 60, :width => 60, :class => 'header-logo'
-          %p.header-tagline He's got character.
-        %nav.header-nav
-          %ul.list.list--inline
-            %li.list-item
-              = link_to 'Home', '/', class: 'header-link'
-            %li.list-item
-              = link_to 'Blog', '/blog', class: 'header-link'
+    = partial 'shared/header'
 
     %section.row.row--a
       .cell.well.well--l
@@ -44,6 +22,4 @@
               = find_and_preserve do
                 = yield
 
-    %footer.row.row--a.tci
-      .cell.well.well--l
-      %p Built using MVCSS and Middleman. Check out the source code on GitHub.
+    = partial 'shared/footer'
