--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -7,6 +7,6 @@
     %nav.header-nav
       %ul.list.list--inline
         %li.list-item
-          = link_to 'Home', '/', class: 'header-link'
+          = link_to 'Home', '/', class: (current_page.url == '/' ? 'header-link is-active' : 'header-link')
         %li.list-item
-          = link_to 'Blog', '/blog', class: 'header-link'
+          = link_to 'Blog', '/blog', class: (current_page.url.match('/blog') ? 'header-link is-active' : 'header-link')
