Add Thumb Component

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -137,6 +137,10 @@ $list-space: $b-space
 
 $split-space: $b-space-s
 
+// ----- Thumb ----- //
+
+$thumb-borderRadius: 4px
+
 // -------------------------------------
 //   Structures
 // -------------------------------------
