Add Pillar Component

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -24,6 +24,7 @@
 @import "components/cell"
 @import "components/grid"
 @import "components/list"
+@import "components/pillar"
 @import "components/row"
 @import "components/split"
 @import "components/thumb"
