--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -54,6 +54,10 @@ $btn--a-color: $alabaster
 $btn--b-background: lighten($btn--a-background, 45%)
 $btn--b-color: #4e4e5b
 
+// Pillar
+
+$pillar-borderColor: $c-border
+
 // ----- Structures ----- //
 
 // ...
@@ -77,7 +81,7 @@ $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 // ----- Typography ----- //
 
 $b-fontFamily-heading: 'ff-tisa-web-pro', 'Georgia', serif
-$b-fontFamily-monospace: menlo, monaco, "andale mono", courier, "lucida console", monospace
+$b-fontFamily-mono: menlo, monaco, "andale mono", courier, "lucida console", monospace
 $b-fontFamily: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontSize: 16px
 $b-fontSize-xs: 60%
@@ -132,6 +136,16 @@ $g-l: em(1024px)
 // ----- List ----- //
 
 $list-space: $b-space
+
+// ----- Pillar ----- //
+
+// Borders & Box Shadow
+
+$pillar-border: $b-border
+
+// Sizing
+
+$pillar-space: $b-space
 
 // ----- Split ----- //
 
