Add pre, code font families

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -27,6 +27,9 @@ li
   margin-bottom: $b-space-s
   margin-top: 0
 
+pre
+  font-family: $b-fontFamily-mono
+
 // ----- Headings ----- //
 
 h1, .h1,
@@ -64,6 +67,11 @@ a
   &:hover,
   &:focus
     color: darken($c-highlight, 10%)
+
+// ----- Code ----- //
+
+code
+  font-family: $b-fontFamily-mono
 
 // ----- Images ----- //
 
