Move Grid variables to Config

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -129,9 +129,22 @@ $btn-space: $b-space
 
 // ----- Grid ----- //
 
+// Breakpoints
+
 $g-s: em(480px)
 $g-m: em(800px)
 $g-l: em(1024px)
+
+// Settings
+
+$g-columns: 12
+$g-defaults: 's' $g-s, 'm' $g-m, 'l' $g-l
+$g-gutter: 20px
+$g-silent: false
+
+// Selector Type
+
+$g-selector: if($g-silent, unquote("%"), unquote("."))
 
 // ----- List ----- //
 
