Increase site text size

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -14,7 +14,8 @@ html
 
 body
   font-size: 100%
-
+  +respond-to($g-m)
+    +font-size(21px)
 // -------------------------------------
 //   Block Content
 // -------------------------------------
