--- a/source/index.haml
+++ b/source/index.haml
@@ -18,7 +18,7 @@
       .g-b.g-b--m--1of2
         .card
           %h3.mbm More Posts
-          %ul.split.split--divided.mbm
+          %ul.split.split--divided.split--responsive.mbm
             - get_posts()[1..3].each do |post|
               %li.split-item
                 .split-cell.split-cell--fluid
